--- a/Project/mystyle.css
+++ b/Project/mystyle.css
@@ -1,107 +1,173 @@
-.slide-box{
-    width: 100%;
-    height: 674px;
-    overflow: hidden;
-    justify-content: center;
-    justify-items: center;
+*{
+    margin: 0;
+    padding: 0;
+}
+.carousel-item img{
+    height: 100vh;
 }
 
-.themes-slide{
+/* Promotion */
+.white{
+    background-color: #fff;
+}
+.section{
+    width: 100%;
+}
+.center{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+.gold{
+    background-color: #ad974f;
+}
+.line{
+    width: 50px;
+    height: 1px;
+    display: inline-block;
+    margin: 0px auto;
+}
+.title-black{
+    color: #000;
+}
+.content h5{
+    font-size: 12px;
+    font-family: sans-serif;
+    font-weight: 500;
+    width: 100%;
+    margin: 15px 0 0 0;
+    display: block;
+    text-transform: uppercase;
+}
+.content h2{
+    font-size: 40px;
+    width: 100%;
+    margin: 10px 0px 10px 0px;
+    line-height: 1.2em;
+    font-weight: 500;
+    display: inline-block;
+    font-family: sans-serif;
+}
+.title-gold{
+    color: #ad974f;
+}
+.content h6{
+    font-size: 18px;
+    color: #3f382e;
+    font-weight: 200;
+    line-height: 1.8em;
+    width: 100%;
+}
+.promotion-slider{
+    margin: 20px auto;
+    width: 1100px;
+    height: 500px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+.promotion-slides{
     width: 500%;
-    height: 674px;
+    height: 500px;
     display: flex;
 }
-
-.themes-slide input{
+.promotion-slides input{
     display: none;
 }
-
-.slide-item{
+.promotion-slide{
     width: 20%;
+    transition: 2s;
+}
+.promotion-slide img{
+    width: 1100px;
+    height: 500px;
+}
+.promotion-navigation-manual{
+    position: absolute;
+    width: 1100px;
+    margin: 10px auto;
+    display: flex;
+    justify-content: center;
+}
+
+
+.promotion-manual-btn{
+    border: 1px solid #C0C0C0;
+    padding: 4px;
+    border-radius: 15px;
+    cursor: pointer;
     transition: 1s;
 }
-
-.slide-item img{
-    width: 1519px;
-    height: 859px;
-    display: flex;
-    margin-top: -200px;
+.promotion-manual-btn:not(:last-child){
+    margin-right: 10px;
+}
+.promotion-manual-btn:hover{
+    background: #010101;
 }
 
-/* manual navigation */
-.navigation-manual{
-    position: absolute;
-    width: 100%;
-    margin-top: -40px;
-    display: flex;
-    justify-content: center;
-}
-
-.manual-btn{
-    border: 2px solid wheat;
-    padding: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 2s;
-}
-
-.manual-btn:not(:last-child){
-    margin-right: 40px;
-}
-
-.manual-btn:hover{
-    background: wheat;
-}
-
-#radio1:checked ~ .first{
+#promotion-radio1:checked ~ .one{
     margin-left: 0;
 }
-
-#radio2:checked ~ .first{
+#promotion-radio2:checked ~ .one{
     margin-left: -20%;
 }
-
-#radio3:checked ~ .first{
+#promotion-radio3:checked ~ .one{
     margin-left: -40%;
 }
-
-#radio4:checked ~ .first{
+#promotion-radio4:checked ~ .one{
     margin-left: -60%;
 }
+#promotion-radio5:checked ~ .one{
+    margin-left: -80%;
+}
+#promotion-radio6:checked ~ .one{
+    margin-left: -100%;
+}
+#promotion-radio7:checked ~ .one{
+    margin-left: -120%;
+}
+#promotion-radio8:checked ~ .one{
+    margin-left: -140%;
+}
 
-/* automatic navigation */
-.navigation-auto{
+.promotion-navigation-auto{
     position: absolute;
     display: flex;
-    width: 100%;
+    width: 1100px;
     justify-content: center;
-    margin-top: 634px;
-    z-index: 0;
+    margin: 510px 0 0 0;
+}
+.promotion-navigation-auto div{
+    border: 1px solid #C0C0C0;
+    padding: 4px;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: 1s;
+}
+.promotion-navigation-auto div:not(:last-child){
+    margin-right: 10px;
 }
 
-.navigation-auto div{
-    border: 2px solid wheat;
-    padding: 5px;
-    border-radius: 10px;
-    transition: 2s;
+#promotion-radio1:checked ~ .promotion-navigation-auto .promotion-auto-btn1{
+    background: #010101;
 }
-
-.navigation-auto div:not(:last-child){
-    margin-right: 40px;
+#promotion-radio2:checked ~ .promotion-navigation-auto .promotion-auto-btn2{
+    background: #010101;
 }
-
-#radio1:checked ~ .navigation-auto .auto-btn1{
-    background: wheat;
+#promotion-radio3:checked ~ .promotion-navigation-auto .promotion-auto-btn3{
+    background: #010101;
 }
-
-#radio2:checked ~ .navigation-auto .auto-btn2{
-    background: wheat;
+#promotion-radio4:checked ~ .promotion-navigation-auto .promotion-auto-btn4{
+    background: #010101;
 }
-
-#radio3:checked ~ .navigation-auto .auto-btn3{
-    background: wheat;
+#promotion-radio5:checked ~ .promotion-navigation-auto .promotion-auto-btn5{
+    background: #010101;
 }
-
-#radio4:checked ~ .navigation-auto .auto-btn4{
-    background: wheat;
+#promotion-radio6:checked ~ .promotion-navigation-auto .promotion-auto-btn6{
+    background: #010101;
+}
+#promotion-radio7:checked ~ .promotion-navigation-auto .promotion-auto-btn7{
+    background: #010101;
+}
+#promotion-radio8:checked ~ .promotion-navigation-auto .promotion-auto-btn8{
+    background: #010101;
 }
