--- a/Project/mystyle.css
+++ b/Project/mystyle.css
@@ -4,6 +4,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 /* my navigation bar design */
@@ -229,7 +230,7 @@
 
 /* Blog section */
 .blog--content{
-    margin-top: 100px;
+    margin-top: 250px;
     width: 100%;
     text-align: center;
 }
@@ -307,7 +308,81 @@
     background-color: #ad974f;
 }
 
-/* Video Section */
+/* About Section */
+.section{
+    width: 100%;
+    padding: 200px 0 0 0;
+}
+
+.about--section{
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+}
+
+.about--section .center{
+    text-align: center;
+}
+.about--content h5{
+    font-size: 12px;
+    color: #fff;
+    letter-spacing: 4px;
+    font-weight: 500;
+    text-transform: uppercase;
+    display: block;
+}
+
+.about--content h2{
+    color: #fff !important;
+    width: 100%;
+    margin: 10px 0 10px 0;
+    line-height: 1.2em;
+    font-weight: 500;
+    display: inline-block;
+}
+
+
+.about--content h6{
+    color: #fff !important;
+    font-size: 18px;
+    font-weight: 200;
+    margin: 10px 0;
+    line-height: 1.8em;
+    width: 100%;
+    display: block;
+}
+
+.about--btn{
+    margin-top: 20px !important;
+    min-width: 200px;
+    padding: 20px 30px;
+    text-align: center;
+    border: 2px solid white;
+    text-transform: uppercase;
+    background-color: white;
+    font-weight: 600;
+    display: inline-block;
+}
+
+.about--btn:hover{
+    animation: my-transition 2s;
+}
+
+.video-back{
+    margin-top: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.video-back video{
+    width: 100% ;
+    height: 100%;
+    object-fit: cover;
+}
+
 
 
 /* Testimonial section */
@@ -348,7 +423,7 @@
 }
 
 .testimonial--clients__info{
-    margin-bottom: 50px;
+    margin-bottom: 70px;
 }
 
 .testimonial--clients__job{
