--- a/Project/mystyle.css
+++ b/Project/mystyle.css
@@ -6,7 +6,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.center{
+    text-align: center;
+}
 .gold{
     background-color: #ad974f;
 }
@@ -599,4 +601,147 @@ body h6{
     .carousel-caption .keyword{
         font-size: 44px;
     }
+}
+
+/* contact--form */
+
+.contact--form{
+    width: 100%;
+    margin: 40px auto 0 auto;
+}
+
+.banner--form{
+    width: 100%;
+    /* height: 100vh; */
+    padding: 100px 0;
+    object-fit: cover;
+    background-image: url('img/contact-img.jpg');
+}
+
+.banner--form .center{
+    text-align: center;
+}
+
+.banner--form__signup{
+    background: #fff;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 60px;
+}
+
+.banner--form__signup .line-black{
+    background-color: #000;
+    width: 50px;
+    height: 1px;
+    display: inline-block;
+    margin: 0px auto;
+}
+
+.banner--form__signup h2{
+    font-size: 30px;
+    margin: 20px 0;
+}
+
+.form-group .input--item{
+    display: inline-block;
+    position: relative;
+    width: 80%;
+    margin: 30px auto 50px auto;
+}
+
+.form-group #form--email{
+    border: none;
+    background-color: #f6f6f6;
+    border-radius: 5px;
+    padding: 25px 25px 24px 25px;
+}
+
+.form-group .input--item #form--submit{
+    padding: 22px;
+    min-width: 150px;
+    border-radius: 5px;
+    background-color: #000;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+@media only screen and (max-width: 991px) {
+    .form-group .input--item #form--submit{
+        min-width: 50px;
+    }
+    .form-group .input--item{
+        width: 100%;
+    }
+}
+
+/* Social */
+.mt-100{
+    margin-top: 50px !important;
+    font-weight: bold;
+}
+
+.social-container{
+    width: 100%;
+    text-align: center;
+}
+.social-container i{
+    margin: auto;
+    font-size: 22px;
+    transition: all 0.3s ease-out;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+}
+.social-container a:hover i{
+    font-size: 24px;
+    opacity: 1;
+    transition: all 0.3s ease-out;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+}
+.social-container a{
+    margin: 5px;
+}
+.m-20 {
+	margin: 20px 0!important;
+}
+.white{
+    background:#fff!important;
+}
+.icon{
+    padding: 20px !important;
+    width: 60px;
+    height: 60px;
+    line-height: 2em !important;
+}
+
+/* Footer */
+footer .links{
+    text-align: center;
+    width: 100%;
+    margin-top: 40px;
+    display: inline-block;
+}
+footer .links a{
+    font-size: 13px;
+    text-decoration: none;
+    color: #000;
+    padding: 0 10px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+footer .copyright{
+    opacity: .9;
+    font-size: 14px;
+    display: inline-block;
+    width: 100%;
+    color: #999;
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
