--- a/Project/mystyle.css
+++ b/Project/mystyle.css
@@ -95,16 +95,19 @@ body h6{
 }
 
 .navbar-nav .dropdown-menu{
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 .navbar-nav .dropdown-menu .dropdown-item{
     color: black;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-size: 12px;
 }
 
 .navbar-nav .dropdown-menu .dropdown-item:hover {
     background-color: transparent;
-    color: wheat;
+    color: rgba(0, 0, 0, .7);
     font-weight: bolder;
 }
 
@@ -113,12 +116,16 @@ body h6{
     font-weight: bolder;
 }
 .navbar-light .navbar-nav .nav-link {
-    color: rgba(0, 0, 0, .8);
+    color: black;
+    padding: 1rem 1rem;
     font-weight: bold;
+    letter-spacing: 2.5px;
+    text-transform: uppercase;
+    font-size: 13px;
 }
 
 .navbar-light .navbar-nav .nav-link:hover{
-    color: rgb(170, 155, 127);
+    color: rgba(0, 0, 0, .7);
 }
 
 .btn-outline-success {
@@ -729,11 +736,11 @@ footer .links{
     display: inline-block;
 }
 footer .links a{
-    font-size: 13px;
+    font-size: 12px;
     text-decoration: none;
     color: #000;
     padding: 0 10px;
-    font-weight: 500;
+    font-weight: bold;
     text-transform: uppercase;
 }
 footer .copyright{
