--- a/Project/mystyle.css
+++ b/Project/mystyle.css
@@ -753,16 +753,32 @@ footer .copyright{
     margin-bottom: 30px;
 }
 
-/* Đăng Nhập */
+/* Đăng Nhập & Đăng ký*/
+.div-btn-close{
+    width: 24px; 
+    height: 24px; 
+    text-align: right;
+    margin: 0 auto; 
+    margin-top: 10px; 
+    margin-right: 10px;
+}
+
+.modal-content{
+    margin-top: 0px;
+}
+
 .modal-header{
     border: none;
-    margin-top: -20px;
+    margin: 0 auto;
+    padding: 0px;
 }
 
 .modal-title{
     font-weight: bold;
-    margin-left: 40%;
+    text-align: center;
     font-size: 16px;
+    margin: 0px auto;
+    letter-spacing: 3px;
 }
 
 .modal-footer{
@@ -772,7 +788,6 @@ footer .copyright{
     display: flex;
     flex-direction: column;
 }
-
 
 .modal-dialog{
     top: 10%;
@@ -803,12 +818,18 @@ footer .copyright{
     margin-bottom: 5px;
     font-weight: bold;
 }
+
 .modal-body .modal-body_item .label-password{
     margin-top: 20px;
     margin-bottom: 5px;
     margin-left: calc(10px + 10%);
     font-weight: bold;
 }
+
+.modal-footer {
+    margin: 0 auto;
+}
+
 .modal-footer .modal-footer-login a button{
     min-width: 240px;
 }
@@ -837,10 +858,10 @@ footer .copyright{
     flex-direction: column;
 }
 
-.modal-footer .modal-footer-signup .forget-password{
-    margin: 5px 0 10px 0;
+.forget-password{
+    margin: 0px auto;
     text-align: center;
-    color: #636D77;
+    color: blue;
 }
 
 .modal-footer .modal-footer-signup button{
@@ -851,161 +872,33 @@ footer .copyright{
     padding: 10px;
     border: none;
     color: white;
-    font-weight: 500;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+}
+
+.modal-footer .modal-footer-login button{
+    min-width: 240px;
+    border-radius: 5px;
+    background-color: goldenrod;
+    font-size: 14px;
+    padding: 10px;
+    border: none;
+    color: white;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
 }
 
 .modal-footer .modal-footer-signup button:hover{
     opacity: 0.7;
 }
 
-/* Đăng Kí */
-#my--modal--signup{
-    top: 10%;
-}
-
-.modal--signup{
-    display: none;
-}
-
-.modal--body{
-    background-color: white;
-    border-radius: 5px;
-}
-
-.auth--form__container{
-    padding: 20px 32px 0 32px;
-}
-
-.auth--form__header{
-    margin-bottom: 40px;
-}
-
-.auth--form__header a{
-    font-size: 16px;
-    font-weight: 400;
-    text-decoration: none;
-    color: black;
-}
-
-.auth--form__header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.auth--form__heading{
-    color:goldenrod;
-    font-size: 24px;
-    font-weight: 400;
-}
-
-.uth--form__form{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.auth--form__group{
-    width: 80%;
-    margin: 0px auto 20px auto;
-}
-
-.auth--form__group label{
-    margin-left: 10px;
-    margin-bottom: 3px;
-    font-size: 14px;
-    font-weight: 600;
-}
-
-.auth--form__group .auth--form__input{
-    width: 100%;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 7px 0px 7px 15px;
-    border-radius: 5px;
-    border: none;
-    background-color: #e6e3e3;
-}
-
-.auth--form__group .auth--form__input:focus{
-    outline: none;
-}
-
-.auth--form__aside{
-    width: 80%;
-    margin: 0px auto;
-}
-.auth--form__policy{
-    text-align: center;
-    font-size: 12px;
-    margin-top: -10px;
-    font-weight: 500;
-}
-
-.auth--form_controls{
-    width: 80%;
-    margin: 0px auto;
-    display: flex;
-    justify-content: space-between;
-}
-
-.auth--form_controls .btn--back{
-    border-radius: 5px;
-    min-width: 120px;
-    background: #6c757d;
-    font-size: 14px;
-    padding: 10px;
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-weight: 500;
-    margin-bottom: 20px;
-}
-
-.auth--form_controls .btn--signup{
-    border-radius: 5px;
-    min-width: 120px;
-    background: #0070ba;
-    font-size: 14px;
-    padding: 10px;
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-weight: 500;
-    margin-bottom: 20px;
-}
-
-.auth--form_controls .btn--back:hover{
-    opacity: 0.8;
-}
-
-.auth--form_controls .btn--signup:hover{
-    opacity: 0.8;
-}
-
-.auth--form-social{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    margin: 0px auto;
-    padding-bottom: 20px;
-}
-
-.auth--form-social a button{
-    min-width: 100%;
-    margin-bottom: 20px;
-    font-size: 14px;
-    padding: 5px;
-    border-radius: 5px;
-    background: #e6e3e3;
+.modal-footer .modal-footer-login button:hover{
+    opacity: 0.7;
 }
 
 @media (min-width: 576px){
     .modal--body{
         max-width: 500px;
         margin: 1.75rem auto;
-    
-    
     }
 }
